# ri-sdk-python-wrapper

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  main.py  pyproject.toml
.github/workflows/: python-publish.yml  python-testing.yml
.ri_sdk_codegen/: README  options.yaml  ri_sdk_pages.txt
.ri_sdk_codegen/RI_SDK_CreateBasic/: method.json
.ri_sdk_codegen/RI_SDK_CreateDeviceComponent/: method.json
.ri_sdk_codegen/RI_SDK_CreateGroupComponent/: method.json
.ri_sdk_codegen/RI_SDK_CreateModelComponent/: method.json
.ri_sdk_codegen/RI_SDK_DestroyComponent/: method.json
.ri_sdk_codegen/RI_SDK_DestroySDK/: method.json
.ri_sdk_codegen/RI_SDK_Device_ModelList/: method.json
.ri_sdk_codegen/RI_SDK_InitSDK/: method.json
.ri_sdk_codegen/RI_SDK_LinkLedToController/: method.json
.ri_sdk_codegen/RI_SDK_LinkPWMToController/: method.json
.ri_sdk_codegen/RI_SDK_LinkRServodriveToController/: method.json
.ri_sdk_codegen/RI_SDK_LinkServodriveToController/: method.json
.ri_sdk_codegen/RI_SDK_LinkVoltageSensorToController/: method.json
.ri_sdk_codegen/RI_SDK_Sensor_Extend/: method.json
.ri_sdk_codegen/RI_SDK_connector_Extend/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_Close/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_CloseAll/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_Extend/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_Open/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_ReadByte/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_ReadBytes/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_SetBus/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_State/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_WriteByte/: method.json
.ri_sdk_codegen/RI_SDK_connector_i2c_WriteBytes/: method.json  options.yaml
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_Extend/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_FlashingWithFrequency/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_FlashingWithPause/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_Flicker/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_GetColor/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_GetState/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_SinglePulse/: method.json
.ri_sdk_codegen/RI_SDK_exec_RGB_LED_Stop/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_CustomDeviceInit/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_Extend/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_GetState/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_RotateByPulse/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_RotateByPulseOverTime/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_RotateWithRelativeSpeed/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_RotateWithRelativeSpeedOverTime/: method.json
.ri_sdk_codegen/RI_SDK_exec_RServoDrive_Stop/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_CustomDeviceInit/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_Extend/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_GetCurrentAngle/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_GetState/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_MinStepRotate/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_Rotate/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_RotateWithRelativeSpeed/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_SetPositionToMidWorkingRange/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_Stop/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_Turn/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_TurnByDutyCycle/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_TurnByPulse/: method.json
.ri_sdk_codegen/RI_SDK_exec_ServoDrive_TurnWithRelativeSpeed/: method.json
.ri_sdk_codegen/RI_SDK_executor_Extend/: method.json
.ri_sdk_codegen/RI_SDK_executor_State/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Current/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_CustomDeviceInit/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Extend/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Power/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_ReadRegBytes/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Sense/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Shunt/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_Voltage/: method.json
.ri_sdk_codegen/RI_SDK_sensor_VoltageSensor_WriteRegBytes/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_Close/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_Extend/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_ExtendToModel/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_GetFreq/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_GetPortDutyCycle/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_GetPortFreq/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_GetResolution/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_ReadByte/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_ReadRegBytes/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_ResetAll/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_ResetPort/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_SetFreq/: method.json
.ri_sdk_codegen/RI_SDK_sigmod_PWM_SetPortDutyCycle/: method.json
examples/: robohand-class-example.py  robohand-example.py
ri_sdk/: __about__.py  __init__.py  exceptions.py  loggers.py  robointellect_base_sdk.py  utils.py
ri_sdk/contrib/: __init__.py  (+1 more)
ri_sdk_codegen/: __init__.py  codegen_params.py  config.py  crawl_for_urls.py  doc_page_crawler.py  generate.py  render_helpers.py  template.robointellect_base_sdk.py.mako  types.py
testing/: conftest.py
utils/: case_converter.py
(+201 files in other folders)
